Integrated backend and connected it tofrontend[Database Running]